tests/invalid_scir_h/invalid_noncanonical_indent.scirh
module invalid.noncanonical_indent
fn bad -> int !
 return 0
